samples/_failures_safe/1761093348_d4876d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8070d259.c: In function ‘main’:
./samples/SAFE/__tmp_8070d259.c:173:23: error: expected ‘;’ at end of input
  173 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_8070d259.c:173:17: error: expected declaration or statement at end of input
  173 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_8070d259.c:173:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8070d259.c:173:17: error: expected declaration or statement at end of input
